// This proto file was automatically generated from xsd by @https://github.com/i-icc/xsd2proto
// Generated by xsd2proto version 0.1.4

syntax = "proto3";

package collision;

import "google/protobuf/timestamp.proto";

enum Status {
  STATUS_ACTIVE = 0;
  STATUS_INACTIVE = 1;
}

enum Status2 {
  STATUS2_PENDING = 0;
  STATUS2_APPROVED = 1;
  STATUS2_REJECTED = 2;
}

message Person {
  string name = 1;
  int32 age = 2;
}

message Document {
  Person owner = 1;
  Status document_status = 2;
  Status2 approval_status = 3;
}

message Person2 {
  string first_name = 1;
  string last_name = 2;
  google.protobuf.Timestamp birth_date = 3;
}

